--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <title>Oggetti studenti</title>
     </head>
     <body>
+        <ul id="studenti">
+        </ul>
         <script src="js/script.js" type="text/javascript"></script>
     </body>
 </html>
